--- a/main.css
+++ b/main.css
@@ -364,4 +364,22 @@ audio{
 #div_buttons{
     width: 405px;
     margin: 0 auto;
+
+}
+
+#btn-theme {
+    display: block;
+    position: relative;
+    margin: 10px auto;
+    padding: 10px;
+    background-color: #208e96;
+    color:white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: all 0.3s ease-out;
+}
+
+#btn-theme:hover{
+    transform: translateY(-8%);
 }
